using Grpc.Core;
using Grpc.Net.Client;
using HslGateway.Grpc;

namespace HslMultiDeviceTest;

class Program
{
    static async Task Main(string[] args)
    {
        Console.OutputEncoding = System.Text.Encoding.UTF8;
        var options = ParseOptions(args);

        Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");
        Console.WriteLine("   HSL Gateway å¤šè¨­å‚™è¨‚é–±æ¸¬è©¦");
        Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");
        Console.WriteLine($"ä¼ºæœå™¨åœ°å€: {options.ServerAddress}\n");

        using var channel = GrpcChannel.ForAddress(options.ServerAddress);
        var client = new Gateway.GatewayClient(channel);

        if (options.AutoDemo)
        {
            await RunAutoDemo(client, options.AutoDemoStatusDuration);
            return;
        }

        while (true)
        {
            Console.WriteLine("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€");
            Console.WriteLine("è«‹é¸æ“‡æ¸¬è©¦:");
            Console.WriteLine("  1. åˆ—å‡ºæ‰€æœ‰è¨­å‚™");
            Console.WriteLine("  2. é¡¯ç¤ºæ‰€æœ‰è¨­å‚™çš„æ¨™ç±¤");
            Console.WriteLine("  3. è®€å–æ‰€æœ‰æ¨™ç±¤çš„ç•¶å‰å€¼");
            Console.WriteLine("  4. è¨‚é–±å–®ä¸€è¨­å‚™çš„æ‰€æœ‰æ¨™ç±¤");
            Console.WriteLine("  5. è¨‚é–±æ‰€æœ‰è¨­å‚™çš„ç‰¹å®šæ¨™ç±¤");
            Console.WriteLine("  6. åŒæ™‚è¨‚é–±å¤šå€‹è¨­å‚™çš„å¤šå€‹æ¨™ç±¤");
            Console.WriteLine("  7. æ¸¬è©¦å¤šè¨­å‚™ä¸¦ç™¼å¯«å…¥");
            Console.WriteLine("  8. ç›£æ§æ‰€æœ‰è¨­å‚™ç‹€æ…‹");
            Console.WriteLine("  0. é€€å‡º");
            Console.WriteLine("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€");
            Console.Write("è¼¸å…¥é¸é …: ");

            var choice = Console.ReadLine();

            try
            {
                switch (choice)
                {
                    case "1":
                        await ListAllDevices(client);
                        break;
                    case "2":
                        await ShowAllDeviceTags(client);
                        break;
                    case "3":
                        await ReadAllTagValues(client);
                        break;
                    case "4":
                        await SubscribeSingleDevice(client);
                        break;
                    case "5":
                        await SubscribeSpecificTagAcrossDevices(client);
                        break;
                    case "6":
                        await SubscribeMultipleDevicesAndTags(client);
                        break;
                    case "7":
                        await TestConcurrentWrites(client);
                        break;
                    case "8":
                        await MonitorAllDeviceStatus(client);
                        break;
                    case "0":
                        Console.WriteLine("\nğŸ‘‹ çµæŸç¨‹å¼...");
                        return;
                    default:
                        Console.WriteLine("âŒ ç„¡æ•ˆçš„é¸é …");
                        break;
                }
            }
            catch (RpcException ex)
            {
                Console.WriteLine($"\nâŒ gRPC éŒ¯èª¤: {ex.Status.StatusCode} - {ex.Status.Detail}");
            }
            catch (Exception ex)
            {
                Console.WriteLine($"\nâŒ éŒ¯èª¤: {ex.Message}");
            }
        }
    }

    static (string ServerAddress, bool AutoDemo, TimeSpan AutoDemoStatusDuration) ParseOptions(string[] args)
    {
        var serverAddress = "http://localhost:50051";
        var autoDemo = false;
        var statusSeconds = 10;

        foreach (var arg in args)
        {
            if (arg.StartsWith("--server=", StringComparison.OrdinalIgnoreCase))
            {
                serverAddress = arg.Substring("--server=".Length);
            }
            else if (arg.Equals("--auto-demo", StringComparison.OrdinalIgnoreCase))
            {
                autoDemo = true;
            }
            else if (arg.StartsWith("--auto-status-seconds=", StringComparison.OrdinalIgnoreCase))
            {
                if (int.TryParse(arg.Substring("--auto-status-seconds=".Length), out var seconds) && seconds > 0)
                {
                    statusSeconds = seconds;
                }
            }
            else if (!arg.StartsWith("--", StringComparison.Ordinal))
            {
                serverAddress = arg;
            }
        }

        return (serverAddress, autoDemo, TimeSpan.FromSeconds(statusSeconds));
    }

    static async Task RunAutoDemo(Gateway.GatewayClient client, TimeSpan monitorDuration)
    {
        Console.WriteLine("ğŸ¤– è‡ªå‹•åŒ–æ¸¬è©¦æƒ…å¢ƒé–‹å§‹...\n");
        await ListAllDevices(client);
        await ShowAllDeviceTags(client);
        await ReadAllTagValues(client);
        await MonitorDeviceStatusForDuration(client, monitorDuration);
        Console.WriteLine("\nâœ… è‡ªå‹•åŒ–æ¸¬è©¦æƒ…å¢ƒå®Œæˆ\n");
    }

    static async Task ListAllDevices(Gateway.GatewayClient client)
    {
        Console.WriteLine("\nğŸ“‹ è¨­å‚™åˆ—è¡¨:");
        var response = await client.ListDevicesAsync(new Empty());
        
        Console.WriteLine($"\næ‰¾åˆ° {response.Devices.Count} å€‹è¨­å‚™:\n");
        foreach (var device in response.Devices)
        {
            Console.WriteLine($"  ğŸ”Œ {device.Id}");
        }
    }

    static async Task ShowAllDeviceTags(Gateway.GatewayClient client)
    {
        Console.WriteLine("\nğŸ“‹ æ‰€æœ‰è¨­å‚™çš„æ¨™ç±¤é…ç½®:\n");
        
        var devicesResponse = await client.ListDevicesAsync(new Empty());
        
        foreach (var device in devicesResponse.Devices)
        {
            Console.WriteLine($"ğŸ”Œ è¨­å‚™: {device.Id}");
            var tagsResponse = await client.ListDeviceTagsAsync(new DeviceRequest { DeviceId = device.Id });
            
            if (tagsResponse.Tags.Count == 0)
            {
                Console.WriteLine("  (ç„¡æ¨™ç±¤)\n");
            }
            else
            {
                foreach (var tag in tagsResponse.Tags)
                {
                    Console.WriteLine($"  â€¢ {tag.TagName,-15} åœ°å€: {tag.Address,-8} é¡å‹: {tag.DataType}");
                }
                Console.WriteLine();
            }
        }
    }

    static async Task ReadAllTagValues(Gateway.GatewayClient client)
    {
        Console.WriteLine("\nğŸ“– è®€å–æ‰€æœ‰æ¨™ç±¤å€¼:\n");
        
        var devicesResponse = await client.ListDevicesAsync(new Empty());
        
        foreach (var device in devicesResponse.Devices)
        {
            var tagsResponse = await client.ListDeviceTagsAsync(new DeviceRequest { DeviceId = device.Id });
            
            Console.WriteLine($"ğŸ”Œ {device.Id}:");
            foreach (var tag in tagsResponse.Tags)
            {
                var valueResponse = await client.GetTagValueAsync(new TagRequest 
                { 
                    DeviceId = device.Id, 
                    TagName = tag.TagName 
                });
                
                var quality = valueResponse.Quality == "good" ? "âœ…" : "âš ï¸";
                Console.WriteLine($"  {tag.TagName,-15} = {valueResponse.Value,8:F2} {quality}");
            }
            Console.WriteLine();
        }
    }

    static async Task SubscribeSingleDevice(Gateway.GatewayClient client)
    {
        Console.Write("\nè¼¸å…¥è¦è¨‚é–±çš„è¨­å‚™ ID (ä¾‹å¦‚: modbus_01): ");
        var deviceId = Console.ReadLine();
        if (string.IsNullOrWhiteSpace(deviceId)) return;

        Console.WriteLine($"\nğŸ”” è¨‚é–±è¨­å‚™ {deviceId} çš„æ‰€æœ‰æ¨™ç±¤");
        Console.WriteLine("   (æŒ‰ Enter åœæ­¢è¨‚é–±)\n");

        var tagsResponse = await client.ListDeviceTagsAsync(new DeviceRequest { DeviceId = deviceId });
        var tasks = new List<Task>();
        var cts = new CancellationTokenSource();

        foreach (var tag in tagsResponse.Tags)
        {
            var tagName = tag.TagName;
            tasks.Add(Task.Run(async () =>
            {
                try
                {
                    using var call = client.SubscribeTagValue(
                        new TagRequest { DeviceId = deviceId, TagName = tagName },
                        cancellationToken: cts.Token);

                    await foreach (var response in call.ResponseStream.ReadAllAsync(cts.Token))
                    {
                        var timestamp = DateTime.Parse(response.TimestampUtc).ToLocalTime();
                        Console.WriteLine($"[{timestamp:HH:mm:ss}] {tagName,-15} = {response.Value,8:F2}");
                    }
                }
                catch (OperationCanceledException) { }
                catch (RpcException ex) when (ex.StatusCode == StatusCode.Cancelled) { }
            }));
        }

        Console.ReadLine();
        cts.Cancel();
        await Task.WhenAll(tasks);
        Console.WriteLine("\nâœ… è¨‚é–±å·²åœæ­¢");
    }

    static async Task SubscribeSpecificTagAcrossDevices(Gateway.GatewayClient client)
    {
        Console.Write("\nè¼¸å…¥è¦è·¨è¨­å‚™è¨‚é–±çš„æ¨™ç±¤åç¨±æ¨¡å¼ (ä¾‹å¦‚: power, speed, æˆ–ç•™ç©ºè¨‚é–±æ‰€æœ‰): ");
        var pattern = Console.ReadLine();

        Console.WriteLine($"\nğŸ”” è¨‚é–±æ‰€æœ‰è¨­å‚™çš„æ¨™ç±¤ (æ¨¡å¼: '{pattern}')");
        Console.WriteLine("   (æŒ‰ Enter åœæ­¢è¨‚é–±)\n");

        var devicesResponse = await client.ListDevicesAsync(new Empty());
        var tasks = new List<Task>();
        var cts = new CancellationTokenSource();

        foreach (var device in devicesResponse.Devices)
        {
            var tagsResponse = await client.ListDeviceTagsAsync(new DeviceRequest { DeviceId = device.Id });
            
            foreach (var tag in tagsResponse.Tags)
            {
                if (string.IsNullOrWhiteSpace(pattern) || tag.TagName.Contains(pattern, StringComparison.OrdinalIgnoreCase))
                {
                    var deviceId = device.Id;
                    var tagName = tag.TagName;
                    
                    tasks.Add(Task.Run(async () =>
                    {
                        try
                        {
                            using var call = client.SubscribeTagValue(
                                new TagRequest { DeviceId = deviceId, TagName = tagName },
                                cancellationToken: cts.Token);

                            await foreach (var response in call.ResponseStream.ReadAllAsync(cts.Token))
                            {
                                var timestamp = DateTime.Parse(response.TimestampUtc).ToLocalTime();
                                Console.WriteLine($"[{timestamp:HH:mm:ss}] {deviceId}/{tagName,-15} = {response.Value,8:F2}");
                            }
                        }
                        catch (OperationCanceledException) { }
                        catch (RpcException ex) when (ex.StatusCode == StatusCode.Cancelled) { }
                    }));
                }
            }
        }

        Console.WriteLine($"å·²å•Ÿå‹• {tasks.Count} å€‹è¨‚é–±\n");
        Console.ReadLine();
        cts.Cancel();
        await Task.WhenAll(tasks);
        Console.WriteLine("\nâœ… æ‰€æœ‰è¨‚é–±å·²åœæ­¢");
    }

    static async Task SubscribeMultipleDevicesAndTags(Gateway.GatewayClient client)
    {
        Console.WriteLine("\nğŸ”” è¨‚é–±æ‰€æœ‰è¨­å‚™çš„æ‰€æœ‰æ¨™ç±¤");
        Console.WriteLine("   (æŒ‰ Enter åœæ­¢è¨‚é–±)\n");

        var devicesResponse = await client.ListDevicesAsync(new Empty());
        var tasks = new List<Task>();
        var cts = new CancellationTokenSource();
        var counts = new Dictionary<string, int>();

        foreach (var device in devicesResponse.Devices)
        {
            var tagsResponse = await client.ListDeviceTagsAsync(new DeviceRequest { DeviceId = device.Id });
            counts[device.Id] = 0;
            
            foreach (var tag in tagsResponse.Tags)
            {
                var deviceId = device.Id;
                var tagName = tag.TagName;
                
                tasks.Add(Task.Run(async () =>
                {
                    try
                    {
                        using var call = client.SubscribeTagValue(
                            new TagRequest { DeviceId = deviceId, TagName = tagName },
                            cancellationToken: cts.Token);

                        await foreach (var response in call.ResponseStream.ReadAllAsync(cts.Token))
                        {
                            lock (counts)
                            {
                                counts[deviceId]++;
                            }
                            var timestamp = DateTime.Parse(response.TimestampUtc).ToLocalTime();
                            Console.WriteLine($"[{timestamp:HH:mm:ss}] {deviceId}/{tagName,-15} = {response.Value,8:F2}");
                        }
                    }
                    catch (OperationCanceledException) { }
                    catch (RpcException ex) when (ex.StatusCode == StatusCode.Cancelled) { }
                }));
            }
        }

        Console.WriteLine($"å·²å•Ÿå‹• {tasks.Count} å€‹è¨‚é–±\n");
        Console.ReadLine();
        cts.Cancel();
        await Task.WhenAll(tasks);
        
        Console.WriteLine("\nâœ… æ‰€æœ‰è¨‚é–±å·²åœæ­¢");
        Console.WriteLine("\nğŸ“Š çµ±è¨ˆ:");
        foreach (var kvp in counts)
        {
            Console.WriteLine($"  {kvp.Key}: æ”¶åˆ° {kvp.Value} ç­†æ›´æ–°");
        }
    }

    static async Task TestConcurrentWrites(Gateway.GatewayClient client)
    {
        Console.WriteLine("\nâœï¸  æ¸¬è©¦å¤šè¨­å‚™ä¸¦ç™¼å¯«å…¥\n");

        var devicesResponse = await client.ListDevicesAsync(new Empty());
        var tasks = new List<Task>();
        var random = new Random();

        foreach (var device in devicesResponse.Devices)
        {
            var tagsResponse = await client.ListDeviceTagsAsync(new DeviceRequest { DeviceId = device.Id });
            
            foreach (var tag in tagsResponse.Tags)
            {
                var deviceId = device.Id;
                var tagName = tag.TagName;
                var value = random.Next(1000, 9999);
                
                tasks.Add(Task.Run(async () =>
                {
                    try
                    {
                        var response = await client.WriteTagValueAsync(new WriteTagRequest
                        {
                            DeviceId = deviceId,
                            TagName = tagName,
                            Value = value
                        });
                        
                        var status = response.Success ? "âœ…" : "âŒ";
                        Console.WriteLine($"{status} {deviceId}/{tagName} = {value} ({response.Message})");
                    }
                    catch (Exception ex)
                    {
                        Console.WriteLine($"âŒ {deviceId}/{tagName}: {ex.Message}");
                    }
                }));
            }
        }

        await Task.WhenAll(tasks);
        Console.WriteLine($"\nâœ… å®Œæˆ {tasks.Count} å€‹å¯«å…¥æ“ä½œ");
        
        // ç­‰å¾…ä¸€ä¸‹å†è®€å–é©—è­‰
        await Task.Delay(1000);
        Console.WriteLine("\nğŸ” é©—è­‰å¯«å…¥çµæœ:\n");
        await ReadAllTagValues(client);
    }

    static async Task MonitorAllDeviceStatus(Gateway.GatewayClient client)
    {
        Console.WriteLine("\nğŸ”” ç›£æ§æ‰€æœ‰è¨­å‚™ç‹€æ…‹");
        Console.WriteLine("   (æŒ‰ Enter åœæ­¢ç›£æ§)\n");

        var devicesResponse = await client.ListDevicesAsync(new Empty());
        var tasks = new List<Task>();
        var cts = new CancellationTokenSource();

        foreach (var device in devicesResponse.Devices)
        {
            var deviceId = device.Id;
            
            tasks.Add(Task.Run(async () =>
            {
                try
                {
                    using var call = client.SubscribeDeviceStatus(
                        new DeviceRequest { DeviceId = deviceId },
                        cancellationToken: cts.Token);

                    await foreach (var response in call.ResponseStream.ReadAllAsync(cts.Token))
                    {
                        var timestamp = DateTime.Parse(response.TimestampUtc).ToLocalTime();
                        var status = response.IsOnline ? "ğŸŸ¢ åœ¨ç·š" : "ğŸ”´ é›¢ç·š";
                        Console.WriteLine($"[{timestamp:HH:mm:ss}] {deviceId}: {status}");
                    }
                }
                catch (OperationCanceledException) { }
                catch (RpcException ex) when (ex.StatusCode == StatusCode.Cancelled) { }
            }));
        }

        Console.WriteLine($"å·²å•Ÿå‹• {tasks.Count} å€‹è¨­å‚™ç‹€æ…‹ç›£æ§\n");
        Console.ReadLine();
        cts.Cancel();
        await Task.WhenAll(tasks);
        Console.WriteLine("\nâœ… ç›£æ§å·²åœæ­¢");
    }

    static async Task MonitorDeviceStatusForDuration(Gateway.GatewayClient client, TimeSpan duration)
    {
        Console.WriteLine($"\nâ±ï¸ ç›£æ§æ‰€æœ‰è¨­å‚™ç‹€æ…‹ï¼ˆç´„ {duration.TotalSeconds:F0} ç§’ï¼‰\n");

        var devicesResponse = await client.ListDevicesAsync(new Empty());
        var cts = new CancellationTokenSource(duration);
        var tasks = new List<Task>();

        foreach (var device in devicesResponse.Devices)
        {
            var deviceId = device.Id;
            tasks.Add(Task.Run(async () =>
            {
                try
                {
                    using var call = client.SubscribeDeviceStatus(new DeviceRequest { DeviceId = deviceId }, cancellationToken: cts.Token);
                    await foreach (var response in call.ResponseStream.ReadAllAsync(cts.Token))
                    {
                        var timestamp = DateTime.Parse(response.TimestampUtc).ToLocalTime();
                        var status = response.IsOnline ? "ğŸŸ¢ åœ¨ç·š" : "ğŸ”´ é›¢ç·š";
                        Console.WriteLine($"[{timestamp:HH:mm:ss}] {deviceId}: {status}");
                    }
                }
                catch (OperationCanceledException) { }
                catch (RpcException ex) when (ex.StatusCode == StatusCode.Cancelled) { }
            }));
        }

        try
        {
            await Task.WhenAll(tasks);
        }
        catch (OperationCanceledException) { }

        Console.WriteLine("\nâ¹ï¸ è‡ªå‹•ç‹€æ…‹ç›£æ§çµæŸ");
    }
}
