using Grpc.Core;
using Grpc.Net.Client;
using HslGateway.Grpc;

namespace HslSubscriber;

class Program
{
    static async Task Main(string[] args)
    {
        Console.OutputEncoding = System.Text.Encoding.UTF8;
        Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•");
        Console.WriteLine("   HSL Gateway è¨‚é–±æ¸¬è©¦å®¢æˆ¶ç«¯");
        Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

        // è§£æå‘½ä»¤è¡Œåƒæ•¸
        var serverAddress = args.Length > 0 ? args[0] : "http://localhost:50051";
        var deviceId = args.Length > 1 ? args[1] : "modbus_01";
        var tagName = args.Length > 2 ? args[2] : "line_power";

        Console.WriteLine($"ä¼ºæœå™¨åœ°å€: {serverAddress}");
        Console.WriteLine($"è¨­å‚™ ID: {deviceId}");
        Console.WriteLine($"æ¨™ç±¤åç¨±: {tagName}\n");

        // å‰µå»º gRPC é€šé“
        using var channel = GrpcChannel.ForAddress(serverAddress);
        var client = new Gateway.GatewayClient(channel);

        // é¡¯ç¤ºé¸å–®
        while (true)
        {
            Console.WriteLine("\nâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€");
            Console.WriteLine("è«‹é¸æ“‡æ“ä½œ:");
            Console.WriteLine("  1. è¨‚é–±æ¨™ç±¤å€¼è®ŠåŒ– (SubscribeTagValue)");
            Console.WriteLine("  2. è¨‚é–±è¨­å‚™ç‹€æ…‹è®ŠåŒ– (SubscribeDeviceStatus)");
            Console.WriteLine("  3. è®€å–å–®å€‹æ¨™ç±¤å€¼ (GetTagValue)");
            Console.WriteLine("  4. å¯«å…¥æ¨™ç±¤å€¼ (WriteTagValue)");
            Console.WriteLine("  5. åˆ—å‡ºæ‰€æœ‰è¨­å‚™ (ListDevices)");
            Console.WriteLine("  6. åˆ—å‡ºè¨­å‚™æ¨™ç±¤ (ListDeviceTags)");
            Console.WriteLine("  7. è®Šæ›´è¨‚é–±è¨­å®š");
            Console.WriteLine("  0. é€€å‡º");
            Console.WriteLine("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€");
            Console.Write("è¼¸å…¥é¸é …: ");

            var choice = Console.ReadLine();

            try
            {
                switch (choice)
                {
                    case "1":
                        await SubscribeTagValue(client, deviceId, tagName);
                        break;
                    case "2":
                        await SubscribeDeviceStatus(client, deviceId);
                        break;
                    case "3":
                        await GetTagValue(client, deviceId, tagName);
                        break;
                    case "4":
                        await WriteTagValue(client, deviceId, tagName);
                        break;
                    case "5":
                        await ListDevices(client);
                        break;
                    case "6":
                        await ListDeviceTags(client, deviceId);
                        break;
                    case "7":
                        Console.Write("è¼¸å…¥è¨­å‚™ ID: ");
                        var newDeviceId = Console.ReadLine();
                        if (!string.IsNullOrWhiteSpace(newDeviceId))
                            deviceId = newDeviceId;
                        
                        Console.Write("è¼¸å…¥æ¨™ç±¤åç¨±: ");
                        var newTagName = Console.ReadLine();
                        if (!string.IsNullOrWhiteSpace(newTagName))
                            tagName = newTagName;
                        
                        Console.WriteLine($"\nâœ… å·²æ›´æ–°: è¨­å‚™={deviceId}, æ¨™ç±¤={tagName}");
                        break;
                    case "0":
                        Console.WriteLine("\nğŸ‘‹ çµæŸç¨‹å¼...");
                        return;
                    default:
                        Console.WriteLine("âŒ ç„¡æ•ˆçš„é¸é …ï¼Œè«‹é‡æ–°è¼¸å…¥ã€‚");
                        break;
                }
            }
            catch (RpcException ex)
            {
                Console.WriteLine($"\nâŒ gRPC éŒ¯èª¤: {ex.Status.StatusCode} - {ex.Status.Detail}");
            }
            catch (Exception ex)
            {
                Console.WriteLine($"\nâŒ éŒ¯èª¤: {ex.Message}");
            }
        }
    }

    static async Task SubscribeTagValue(Gateway.GatewayClient client, string deviceId, string tagName)
    {
        Console.WriteLine($"\nğŸ”” é–‹å§‹è¨‚é–±æ¨™ç±¤å€¼: {deviceId}/{tagName}");
        Console.WriteLine("   (æŒ‰ Enter åœæ­¢è¨‚é–±)\n");

        var request = new TagRequest
        {
            DeviceId = deviceId,
            TagName = tagName
        };

        using var cts = new CancellationTokenSource();

        // åœ¨èƒŒæ™¯åŸ·è¡Œè¨‚é–±
        var subscriptionTask = Task.Run(async () =>
        {
            int count = 0;
            try
            {
                using var call = client.SubscribeTagValue(request, cancellationToken: cts.Token);

                await foreach (var response in call.ResponseStream.ReadAllAsync(cts.Token))
                {
                    count++;
                    var timestamp = DateTime.Parse(response.TimestampUtc).ToLocalTime();
                    var quality = response.Quality == "good" ? "âœ…" : "âš ï¸";
                    
                    Console.WriteLine($"[{count:D4}] {timestamp:HH:mm:ss.fff} | {response.DeviceId}/{response.TagName} = {response.Value,8:F2} {quality}");
                }
            }
            catch (OperationCanceledException)
            {
                Console.WriteLine($"\nâœ… è¨‚é–±å·²åœæ­¢ (å…±æ”¶åˆ° {count} ç­†è³‡æ–™)");
            }
            catch (RpcException ex) when (ex.StatusCode == StatusCode.Cancelled)
            {
                Console.WriteLine($"\nâœ… è¨‚é–±å·²åœæ­¢ (å…±æ”¶åˆ° {count} ç­†è³‡æ–™)");
            }
        });

        // ç­‰å¾…ä½¿ç”¨è€…æŒ‰ Enter
        Console.ReadLine();
        cts.Cancel();
        
        // ç­‰å¾…è¨‚é–±ä»»å‹™å®Œæˆ
        await subscriptionTask;
    }

    static async Task SubscribeDeviceStatus(Gateway.GatewayClient client, string deviceId)
    {
        Console.WriteLine($"\nğŸ”” é–‹å§‹è¨‚é–±è¨­å‚™ç‹€æ…‹: {deviceId}");
        Console.WriteLine("   (æŒ‰ Enter åœæ­¢è¨‚é–±)\n");

        var request = new DeviceRequest
        {
            DeviceId = deviceId
        };

        using var cts = new CancellationTokenSource();

        // åœ¨èƒŒæ™¯åŸ·è¡Œè¨‚é–±
        var subscriptionTask = Task.Run(async () =>
        {
            int count = 0;
            try
            {
                using var call = client.SubscribeDeviceStatus(request, cancellationToken: cts.Token);

                await foreach (var response in call.ResponseStream.ReadAllAsync(cts.Token))
                {
                    count++;
                    var timestamp = DateTime.Parse(response.TimestampUtc).ToLocalTime();
                    var status = response.IsOnline ? "ğŸŸ¢ åœ¨ç·š" : "ğŸ”´ é›¢ç·š";
                    
                    Console.WriteLine($"[{count:D4}] {timestamp:HH:mm:ss.fff} | {response.DeviceId}: {status}");
                }
            }
            catch (OperationCanceledException)
            {
                Console.WriteLine($"\nâœ… è¨‚é–±å·²åœæ­¢ (å…±æ”¶åˆ° {count} ç­†ç‹€æ…‹æ›´æ–°)");
            }
            catch (RpcException ex) when (ex.StatusCode == StatusCode.Cancelled)
            {
                Console.WriteLine($"\nâœ… è¨‚é–±å·²åœæ­¢ (å…±æ”¶åˆ° {count} ç­†ç‹€æ…‹æ›´æ–°)");
            }
        });

        // ç­‰å¾…ä½¿ç”¨è€…æŒ‰ Enter
        Console.ReadLine();
        cts.Cancel();
        
        // ç­‰å¾…è¨‚é–±ä»»å‹™å®Œæˆ
        await subscriptionTask;
    }

    static async Task GetTagValue(Gateway.GatewayClient client, string deviceId, string tagName)
    {
        Console.WriteLine($"\nğŸ“– è®€å–æ¨™ç±¤å€¼: {deviceId}/{tagName}");

        var request = new TagRequest
        {
            DeviceId = deviceId,
            TagName = tagName
        };

        var response = await client.GetTagValueAsync(request);
        var timestamp = string.IsNullOrEmpty(response.TimestampUtc) 
            ? "N/A" 
            : DateTime.Parse(response.TimestampUtc).ToLocalTime().ToString("yyyy-MM-dd HH:mm:ss.fff");

        Console.WriteLine($"\nâ”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€");
        Console.WriteLine($"â”‚ è¨­å‚™ ID:   {response.DeviceId}");
        Console.WriteLine($"â”‚ æ¨™ç±¤åç¨±:  {response.TagName}");
        Console.WriteLine($"â”‚ æ•¸å€¼:      {response.Value:F2}");
        Console.WriteLine($"â”‚ æ™‚é–“æˆ³è¨˜:  {timestamp}");
        Console.WriteLine($"â”‚ å“è³ª:      {response.Quality}");
        Console.WriteLine($"â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€");
    }

    static async Task WriteTagValue(Gateway.GatewayClient client, string deviceId, string tagName)
    {
        Console.Write($"\nâœï¸  è¼¸å…¥è¦å¯«å…¥ {deviceId}/{tagName} çš„æ•¸å€¼: ");
        var input = Console.ReadLine();
        
        if (!double.TryParse(input, out var value))
        {
            Console.WriteLine("âŒ ç„¡æ•ˆçš„æ•¸å€¼æ ¼å¼");
            return;
        }

        var request = new WriteTagRequest
        {
            DeviceId = deviceId,
            TagName = tagName,
            Value = value
        };

        Console.WriteLine($"â³ æ­£åœ¨å¯«å…¥...");
        var response = await client.WriteTagValueAsync(request);

        if (response.Success)
        {
            Console.WriteLine($"âœ… å¯«å…¥æˆåŠŸ: {value}");
            
            // ç­‰å¾…ä¸€ä¸‹å†è®€å›ä¾†é©—è­‰
            await Task.Delay(500);
            Console.WriteLine("\nğŸ” é©—è­‰å¯«å…¥çµæœ...");
            await GetTagValue(client, deviceId, tagName);
        }
        else
        {
            Console.WriteLine($"âŒ å¯«å…¥å¤±æ•—: {response.Message}");
        }
    }

    static async Task ListDevices(Gateway.GatewayClient client)
    {
        Console.WriteLine("\nğŸ“‹ è¨­å‚™åˆ—è¡¨:");

        var response = await client.ListDevicesAsync(new Empty());

        if (response.Devices.Count == 0)
        {
            Console.WriteLine("  (ç„¡è¨­å‚™)");
        }
        else
        {
            Console.WriteLine($"\næ‰¾åˆ° {response.Devices.Count} å€‹è¨­å‚™:\n");
            foreach (var device in response.Devices)
            {
                Console.WriteLine($"  â€¢ {device.Id}");
            }
        }
    }

    static async Task ListDeviceTags(Gateway.GatewayClient client, string deviceId)
    {
        Console.WriteLine($"\nğŸ“‹ è¨­å‚™ {deviceId} çš„æ¨™ç±¤åˆ—è¡¨:");

        var request = new DeviceRequest { DeviceId = deviceId };
        var response = await client.ListDeviceTagsAsync(request);

        if (response.Tags.Count == 0)
        {
            Console.WriteLine("  (ç„¡æ¨™ç±¤)");
        }
        else
        {
            Console.WriteLine($"\næ‰¾åˆ° {response.Tags.Count} å€‹æ¨™ç±¤:\n");
            Console.WriteLine("â”Œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¬â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”");
            Console.WriteLine("â”‚ æ¨™ç±¤åç¨±            â”‚ åœ°å€         â”‚ é¡å‹     â”‚");
            Console.WriteLine("â”œâ”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¼â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¼â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”¤");
            
            foreach (var tag in response.Tags)
            {
                Console.WriteLine($"â”‚ {tag.TagName,-19} â”‚ {tag.Address,-12} â”‚ {tag.DataType,-8} â”‚");
            }
            
            Console.WriteLine("â””â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”´â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”´â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”˜");
        }
    }
}
